added jwt security

--- a/idea-tracker/src/main/resources/application.properties
+++ b/idea-tracker/src/main/resources/application.properties
@@ -6,3 +6,9 @@ quarkus.datasource.min-size=3
 quarkus.datasource.max-size=16
 
 quarkus.hibernate-orm.database.generation = drop-and-create
+
+
+#Security
+mp.jwt.verify.publickey.location=publicKey.pem
+mp.jwt.verify.issuer=RedHat
+quarkus.smallrye-jwt.enabled=true
