added cors support

--- a/idea-tracker/src/main/resources/application.properties
+++ b/idea-tracker/src/main/resources/application.properties
@@ -12,3 +12,6 @@ quarkus.hibernate-orm.database.generation = drop-and-create
 mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=RedHat
 quarkus.smallrye-jwt.enabled=true
+
+#CORS
+quarkus.http.cors=true
