--- a/idea-tracker-frontend/package.json
+++ b/idea-tracker-frontend/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "carbon-components": "^10.50.0",
+    "carbon-components-react": "^7.50.0",
+    "carbon-icons": "^7.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
